# matplot-flex

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  main.py  plans  pyproject.toml  requirements.txt  smoke_test.py
.devcontainer/: codex_notify.sh  devcontainer.json  postCreate.sh
.github/workflows/: ci.yml
docs/: full_reference.md  issues_and_improvements.md  third_party_licenses.md
matplot_flex/: README.md  __init__.py  decorators.py  layout.py  templates.py  text_utils.py
plan/: 2025-12-19-primary-axes-helper.md  2025-12-21-module-structure.md
tests/: test_usage_patterns.py
