[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "matplot-flex"
version = "0.1.0"
description = "Modular matplotlib plotting helpers"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib",
    "numpy",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.urls]
Homepage = "https://example.com/matplot-flex"

[tool.setuptools.packages.find]
where = ["."]
include = ["matplot_flex*"]
